<resources>
    <string name="app_name">MessageSDKSampleApp</string>
    <string name="chatroom_1">Chatroom 1</string>
    <string name="chatroom_2">Chatroom 2</string>
    <string name="chatroom_3">Chatroom 3</string>
    <string name="start_chatroom_title">Chat</string>
    <string name="chat_room_token">Chat Room Token</string>
    <string name="chat_room_token_field_hint">Please input your chat room token.</string>
    <string name="refresh_token">Refresh Token</string>
    <string name="refresh_token_field_hint">Please input your refresh token.</string>
    <string name="username">Username</string>
    <string name="username_field_hint">Please input username.</string>
    <string name="device_id">Device ID</string>
    <string name="device_id_field_hint">Please input device id.</string>
    <string name="is_admin">Is Admin</string>
    <string name="chatroom_id">Chatroom ID</string>
    <string name="chatroom_id_field_hint">Please input chatroom id.</string>
    <string name="create_new_chatroom_id">New Chatroom</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="chatroom_title">Chatroom</string>
    <string name="send">Send</string>
    <string name="no_history_message">No history message.</string>
    <string name="message_to_send_hint">Enter message to send.</string>
    <string name="disable_send_message_hint">Disable for sending message.</string>
    <string name="chatroom_is_muted_hint">Chatroom is muted.</string>
    <string name="send_button_hint">Send message</string>
    <string name="disconnect_button_hint">Disconnect chatroom</string>
    <string name="chatroom_more_button_hint">Chatroom more action</string>
    <string name="back_to_chatroom_hint">Back to chatroom</string>
    <string name="refresh_button_hint">Refresh chatroom info</string>
    <string name="chatroom_info_updated">Chatroom Info Updated</string>
    <string name="delete">Delete</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="block_user">Block user</string>
    <string name="chatroom_info">Chatroom Info</string>
    <string name="unblock_user">Unblock user</string>
    <string name="unblock">Unblock</string>
    <string name="mute_chatroom">Mute Chatroom</string>
    <string name="unmute_chatroom">Unmute Chatroom</string>
    <string name="pinned_messages">Pinned Messages</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="blocked_user">(Blocked User)</string>
    <string name="refresh_user">Refresh User</string>
    <string name="update_viewer_info">Update Viewer Info</string>
    <string name="enable_viewer_info">Enable Viewer Info</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="no_pinned_message">No pinned message.</string>
    <string name="no_blocked_user">No blocked user.</string>
    <string name="error">Error Detail</string>
    <string name="error_code_title">Error code: </string>
    <string name="error_message_title">Error message: </string>
    <string name="error_reason_title">Error reason: </string>
    <string name="reconnect">Reconnect</string>
    <string name="generate_device_id">Gen.</string>
    <string name="update_interval_title">Update Custom Message Count Interval</string>
    <string name="update_interval_field_hint">Please input update interval (ms).</string>
    <string name="batch_interval_title">Batch Custom Message Count Interval</string>
    <string name="batch_interval_field_hint">Please input batch interval (ms).</string>
    <string name="message_sdk_version">Message SDK Version: %s</string>
    <string name="filter_message">Filter message</string>
    <string name="none">None</string>

</resources>