<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="280dp">

    <TextView
        android:id="@+id/text_dialog_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/tea_green"
        android:padding="12dp"
        android:text="@string/refresh_user"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_username_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/username"
        app:layout_constraintBottom_toBottomOf="@id/input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/input" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_username_title"
        app:layout_constraintTop_toBottomOf="@id/text_dialog_title" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/selector_button"
        android:text="@string/cancel"
        android:textColor="@color/selector_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_update"
        app:layout_constraintTop_toBottomOf="@id/input" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/selector_button"
        android:text="@string/update"
        android:textColor="@color/selector_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input" />

</androidx.constraintlayout.widget.ConstraintLayout>