<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/beige"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_disconnect"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="start"
            android:background="@drawable/selector_ic_disconnect"
            android:contentDescription="@string/disconnect_button_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/chatroom_title"
            android:textColor="@color/black"
            android:textSize="@dimen/toolbar_title" />

        <Button
            android:id="@+id/button_info"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="end"
            android:layout_marginEnd="12dp"
            android:background="@drawable/selector_ic_more"
            android:contentDescription="@string/chatroom_more_button_hint" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/text_connection_state"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/tea_green"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:text="CONNECTING" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_connection_state">

        <include
            android:id="@+id/view_loading"
            layout="@layout/layout_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_message"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@id/layout_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="20" />

        <TextView
            android:id="@+id/text_no_history_message"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/no_history_message"
            android:textSize="@dimen/textview_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/layout_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_message">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:enabled="false"
                android:hint="@string/message_to_send_hint"
                android:textColor="@color/selector_edit_text_enable_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_send"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/selector_button"
                android:contentDescription="@string/send_button_hint"
                android:text="@string/send"
                android:textColor="@color/selector_button_text"
                android:textSize="@dimen/button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_like"
                app:layout_constraintStart_toEndOf="@id/input"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_like"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/selector_ic_like"
                android:enabled="false"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/button_send"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>